- increase the gap between project cards so on mobile more of the background is shown as there will be a single column of project cards - prevent mobile chrome URL bar hiding/showing on scroll which caused the window to resize showing a temporary unpainted bottom of the page

--- a/src/components/project-list/style.css
+++ b/src/components/project-list/style.css
@@ -2,7 +2,7 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fill, 160px);
 	grid-auto-rows: 160px;
-	grid-gap: 10px;
+	grid-gap: 40px;
 	justify-content: center;
 	max-width: 830px;
 	margin: 0 auto;
